@@ -51,7 +51,7 @@ ClientManager::~ClientManager()
 {
     // make all clients visible at their original floating position
     for (auto c : clients_) {
-        auto r = c.second->float_size_;
+        Rectangle r = c.second->float_size_;
         auto window = c.second->x11Window();
         XMoveResizeWindow(X_->display(), window, r.x, r.y, r.width, r.height);
         XReparentWindow(X_->display(), window, X_->root(), r.x, r.y);
